Fixed spacing of the footer area

--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ body {
     transform: translate(-50%, -50%);
 }
 
+.rigo {
+    padding: 0px;
+    text-decoration: none;
+}
+
 img {
     margin: auto;
     width: 100%;
@@ -37,25 +42,30 @@ img {
     float: left;
     /* width: 60px;
     height: 60px; */
-    font-size: 4em;
+    font-size: 2.3em;
+    padding: 15px;
     background: orangered;
 }
 
 .iconell {
     float: right;
+    font-size: 2.3em;
     background: skyblue;
+    padding: 15px;
 }
 
 .lefticons {
     /* margin: 50%; */
     float: left;
-    padding-left: 12px;
+    /* padding-left: 12px; */
+    font-size: 2.3em;
     background: blueviolet;
 }
 
 .iconbookmark {
     float: right;
-    padding-right: 12px;
+    /* padding-right: 12px; */
+    font-size: 2.3em;
     background: burlywood;
 }
 
@@ -64,8 +74,21 @@ img {
     background: yellow;
 }
 
+.bottomicons {
+    padding: 10px;
+}
+
 footer {
-    padding:15px;
+    /* padding:15px; */
     background:chartreuse;
  
+}
+
+.liked {
+    padding: 10px;
+    float: left;
+}
+
+.text {
+    padding: 10px;
 }
